--- a/codificacao/pom.xml
+++ b/codificacao/pom.xml
@@ -12,6 +12,7 @@
         <activejdbc.version>2.0</activejdbc.version>
         <activeweb.version>2.0</activeweb.version>
         <environments>test,development</environments>
+        <java-tools>/usr/lib/jvm/java-8-openjdk/lib/tools.jar</java-tools>
     </properties>
 
     <build>
@@ -128,7 +129,7 @@
             <artifactId>tools</artifactId>
             <version>1.8.0</version>
             <scope>system</scope>
-            <systemPath>${java.home}/../lib/tools.jar</systemPath>
+            <systemPath>${java-tools}</systemPath>
         </dependency>
         <dependency>
             <groupId>org.eclipse.jetty.websocket</groupId>
