Database connection setup.

--- a/codificacao/src/main/resources/database.properties
+++ b/codificacao/src/main/resources/database.properties
@@ -3,6 +3,10 @@ development.username=postgres
 development.password=postgres
 development.url=jdbc:postgresql://172.17.0.2:5432/gpv
 
+production.driver=org.postgresql.Driver
+production.username=postgres
+production.password=postgres
+production.url=jdbc:postgresql://172.17.0.2:5432/gpv
 
 test.driver=org.postgresql.Driver
 test.username=postgres
