City and Road CRUD created while conforming to non  relational API standards, also the database connection is managed now  by apache dbcp connection pooling library.

--- a/codificacao/src/main/resources/database.properties
+++ b/codificacao/src/main/resources/database.properties
@@ -2,13 +2,18 @@ development.driver=org.postgresql.Driver
 development.username=postgres
 development.password=postgres
 development.url=jdbc:postgresql://172.17.0.2:5432/gpv
+development.jndi=java:comp/env/jdbc/gpv
 
 production.driver=org.postgresql.Driver
 production.username=postgres
 production.password=postgres
 production.url=jdbc:postgresql://172.17.0.2:5432/gpv
+production.jndi=java:comp/env/jdbc/gpv
 
 test.driver=org.postgresql.Driver
 test.username=postgres
 test.password=postgres
 test.url=jdbc:postgresql://172.17.0.2:5432/gpv
+
+
+
