--- a/codificacao/pom.xml
+++ b/codificacao/pom.xml
@@ -163,5 +163,10 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.9.8</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-dbcp2</artifactId>
+            <version>2.6.0</version>
+        </dependency>
     </dependencies>
 </project>
